--- a/MusicPlayer/MusicPlayer/EQ.xaml
+++ b/MusicPlayer/MusicPlayer/EQ.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="MusicPlayer.EQ"
-        Title="EQ" Height="73.5" Width="231" ResizeMode="NoResize" WindowStyle="None">
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Name="EQForm" x:Class="MusicPlayer.EQ"
+        Title="EQ" Height="73.5" Width="231" ResizeMode="NoResize" WindowStyle="None" MouseLeftButtonDown="EQForm_MouseLeftButtonDown">
     <Window.Resources>
         <LinearGradientBrush x:Key="HorizontalSliderThumbHoverBackgroundInverted" EndPoint="0,0" StartPoint="0,1">
             <GradientStop Color="white" Offset="0"/>
