--- a/MusicPlayer/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MusicPlayer/MainWindow.xaml
@@ -160,31 +160,6 @@
 				</Trigger>
 			</ControlTemplate.Triggers>
 		</ControlTemplate>
-        <Style x:Key="MenuItemStyle1" TargetType="{x:Type MenuItem}">
-            <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-            <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="ScrollViewer.PanningMode" Value="Both"/>
-            <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
-            <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuItemTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
-            <Style.Triggers>
-                <Trigger Property="Role" Value="TopLevelHeader">
-                    <Setter Property="Padding" Value="7,2,8,3"/>
-                    <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=TopLevelHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
-                </Trigger>
-                <Trigger Property="Role" Value="TopLevelItem">
-                    <Setter Property="Padding" Value="7,2,8,3"/>
-                    <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=TopLevelItemTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
-                </Trigger>
-                <Trigger Property="Role" Value="SubmenuHeader">
-                    <Setter Property="Padding" Value="2,3,2,3"/>
-                    <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey ResourceId=SubmenuHeaderTemplateKey, TypeInTargetAssembly={x:Type MenuItem}}}"/>
-                </Trigger>
-                <Trigger Property="Role" Value="SubmenuItem">
-                    <Setter Property="Padding" Value="2,3,2,3"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
 
         <SolidColorBrush x:Key="TabControlNormalBorderBrush" Color="#8C8E94"/>
         <Style x:Key="TabControlStyle1">
@@ -1728,52 +1703,6 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style x:Key="ButtonStyle11" TargetType="{x:Type Button}" BasedOn="{x:Null}">
-            <Setter Property="FocusVisualStyle" Value="{DynamicResource SimpleButtonFocusVisual}"/>
-            <Setter Property="Background" Value="{DynamicResource NormalBrush}"/>
-            <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-
-                        <!-- We use Grid as a root because it is easy to add more elements to customize the button -->
-                        <Grid x:Name="Grid">
-
-                            <Border x:Name="Border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
-                                <TextBlock x:Name="textBlock" TextWrapping="Wrap" Text="{TemplateBinding Content}" FontSize="13.333" FontFamily="Segoe UI Light" VerticalAlignment="Top" Height="18.175" Margin="0,-4.175,0,0">
-                                    <TextBlock.Background>
-                                        <ImageBrush ImageSource="Image/close1.png" Stretch="None"/>
-                                    </TextBlock.Background>
-                                </TextBlock>
-                            </Border>
-
-                            <!-- Content Presenter is where the text content etc is placed by the control -->
-                        </Grid>
-
-                        <!--Each state sets a brush on the Border in the template -->
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsKeyboardFocused" Value="true">
-                                <Setter Property="Foreground" Value="#FF4B1509"/>
-                                <Setter Property="Foreground" TargetName="textBlock" Value="White"/>
-                            </Trigger>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter Property="Foreground" Value="#FF4B1509"/>
-                                <Setter Property="Foreground" TargetName="textBlock" Value="#FF4B1509"/>
-                            </Trigger>
-                            <Trigger Property="IsPressed" Value="true">
-                                <Setter Property="Foreground" TargetName="textBlock" Value="#FF4B1509"/>
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="true"/>
-                            <Trigger Property="IsEnabled" Value="false">
-                                <Setter Property="Background" Value="{DynamicResource DisabledBackgroundBrush}" TargetName="Border"/>
-                                <Setter Property="BorderBrush" Value="{DynamicResource DisabledBorderBrush}" TargetName="Border"/>
-                                <Setter Property="Foreground" Value="{DynamicResource DisabledForegroundBrush}"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
         <Style x:Key="ButtonStyle12" TargetType="{x:Type Button}" BasedOn="{x:Null}">
             <Setter Property="FocusVisualStyle" Value="{DynamicResource SimpleButtonFocusVisual}"/>
             <Setter Property="Background" Value="{DynamicResource NormalBrush}"/>
@@ -1955,7 +1884,7 @@
                         <ImageBrush ImageSource="Image/add1.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="BDelete" Content="Button" Grid.Column="3" Style="{DynamicResource ButtonStyle4}" Foreground="{x:Null}" BorderBrush="{x:Null}">
+                <Button x:Name="BDelete" Content="Button" Grid.Column="3" Style="{DynamicResource ButtonStyle4}" Foreground="{x:Null}" BorderBrush="{x:Null}" Click="BDelete_Click">
                     <Button.Background>
                         <ImageBrush ImageSource="Image/delete1.png" Stretch="Uniform"/>
                     </Button.Background>
@@ -2078,7 +2007,7 @@
                 </Button>
                 <Button x:Name="FriendsButton" Content="friends" Grid.Row="2" Style="{DynamicResource ButtonStyle1}" Margin="4,1,34,6" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" Grid.RowSpan="2"
                 	Grid.Column="0" FontFamily="Gisha" Click="Button_Click_2"/>
-                <Button x:Name="equalizerButton" Content="equalizer" Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonStyle1}" Margin="4,1,34,9" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" Grid.RowSpan="2" Click="equalizerButton_Click">
+                <Button x:Name="EqualizerButton" Content="equalizer" Grid.Row="1" Grid.Column="0" Style="{DynamicResource ButtonStyle1}" Margin="4,1,34,9" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" Grid.RowSpan="2" Click="equalizerButton_Click">
                     <Button.ContextMenu>
                         <ContextMenu/>
                     </Button.ContextMenu>
@@ -2088,9 +2017,9 @@
                 <TextBlock Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Text="VKMP 2" HorizontalAlignment="Left" Margin="4.226,-2.672,0,4" Foreground="White" FontFamily="Roboto" FontSize="26.667"/>
                 <Button Content="playlist" x:Name="ViziblePlayList" Grid.Row="5" Grid.Column="0"
                 	Style="{DynamicResource ButtonStyle1}" Margin="3.67,-1.997,28.163,-1.337" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="White" Height="14" FontFamily="Gisha" d:LayoutOverrides="VerticalMargin" Click="ViziblePlayList_Click"/>
-                <Button x:Name="CloseApp" Content="" Style="{DynamicResource ButtonStyle12}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="20,4,0,0" VerticalAlignment="Top" Width="8" Click="CloseApp_Click" RenderTransformOrigin="0.472,0.487"/>
-                <Button x:Name="button1" Content="" Style="{DynamicResource ButtonStyle13}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="10,4,0,0" VerticalAlignment="Top" Width="8" Click="button1_Click" RenderTransformOrigin="0.472,0.487" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}"/>
-                <Button x:Name="minimyz" Content="" Style="{DynamicResource ButtonStyle14}" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="0,4,0,0" VerticalAlignment="Top" Width="8" Click="minimyz_Click" RenderTransformOrigin="0.472,0.487" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}"/>
+                <Button x:Name="CloseApp" Content="" Style="{DynamicResource ButtonStyle12}" Grid.Row="0" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="20,4,0,0" VerticalAlignment="Top" Width="8" Click="CloseApp_Click" RenderTransformOrigin="0.472,0.487"/>
+                <Button x:Name="Button1" Content="" Style="{DynamicResource ButtonStyle13}" Grid.Row="0" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="10,4,0,0" VerticalAlignment="Top" Width="8" Click="button1_Click" RenderTransformOrigin="0.472,0.487" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}"/>
+                <Button x:Name="Minimyz" Content="" Style="{DynamicResource ButtonStyle14}" Grid.Row="0" Grid.Column="12" HorizontalAlignment="Left" Height="13" Margin="0,4,0,0" VerticalAlignment="Top" Width="8" Click="minimyz_Click" RenderTransformOrigin="0.472,0.487" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}"/>
             </Grid>
         </ToolBarPanel>
 
